Fix alignRight not working & default background color.

--- a/src/r-emoji-selector/emoji.css
+++ b/src/r-emoji-selector/emoji.css
@@ -1,4 +1,5 @@
 .emoji-picker {
+   z-index: 100;
    position: absolute;
    /*
    left: 50%;
@@ -9,7 +10,7 @@
    font-size: 13px;
    margin-top: 10px;
    border-radius: 10px;
-   background: rgb(0,0,0,0.05);
+   background: rgb(255,255,255,0.8);
    backdrop-filter: blur(40px);
    -webkit-box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.3); 
    box-shadow: 0px 0px 11px 0px rgba(0,0,0,0.3);
@@ -23,8 +24,8 @@
 }
 
 .emoji-picker.emoji-dark-mode {
-   background: rgb(0,0,0,0.4);
-   backdrop-filter: blur(90px);
+   background: rgb(0,0,0,0.6);
+   backdrop-filter: blur(40px);
    color: #f8fafc;
 }
 
@@ -137,6 +138,10 @@
    width: 100%;
    border: 0;
    font-size: 12px;
+}
+
+.emoji-search > input::placeholder {
+   color: rgb(0,0,0, 0.7);
 }
 
 
